# recipe-app-api

./: .travis.yml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: settings.py
src/: .flake8
src/app/: settings.py
src/core/: admin.py  models.py
src/core/management/commands/: wait_for_db.py
src/core/migrations/: 0001_initial.py  0002_tag.py
src/core/tests/: test_admin.py  test_commands.py  test_models.py
src/recipe/: urls.py  views.py
src/recipe/tests/: test_tag_api.py
src/recipe_app/: settings.py  urls.py
src/user/: serializers.py  urls.py  views.py
src/user/tests/: test_user_api.py
