[tool.poetry]
name = "recipe-app"
version = "0.1.0"
description = ""
authors = ["Daniele Iervolino <raiervol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
djangorestframework = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipython = "^7.9"
pylint = "^2.4"
black = {version = "*", allows-prereleases = true}
httpie = "^1.0"
pdbpp = "^0.10.2"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
